Fix face capture overlay shape on Firefox

--- a/src/components/Face/style.css
+++ b/src/components/Face/style.css
@@ -1,7 +1,6 @@
 .circle{
-  width: 0;
-  height: 0;
-  padding: 0 45% 60% 0;
+  width: 45%;
+  height: 80%;
   border-radius: 100%;
 }
 
